# caffe2

./: .gitignore  CMakeLists.txt  Makefile
caffe2/: CMakeLists.txt
caffe2/core/: blob.h  flags.h  logging.cc  logging.h  net.cc  net.h  operator.h  registry.h
caffe2/operators/: CMakeLists.txt  elementwise_op.h  fully_connected_op.h
caffe2/python/: brew.py  core.py  model_helper.py
caffe2/python/helpers/: pooling.py
caffe2/python/projects/mnist/: mnist.py
caffe2/utils/: proto_utils.h
cmake/: Dependencies.cmake  ProtoBuf.cmake  Whitelist.cmake
cmake/Modules/: FindNNPACK.cmake
scripts/: build_android.sh  build_host_protoc.sh  get_python_cmake_flags.py
